# Mini-projet

./: .gitignore  CMakeLists.txt  README.md
Lib/glad/include/glad/: gl.h
shaders/: fragment.glsl
src/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  main.cpp  utils.hpp
